--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
         <div class="hero-ctas">
           <a class="cta-secondary" href="#contact">문의하기</a>
            <a class="cta-secondary" href="#models">모델/요금 보기</a>
-          <a href="https://smartstore.naver.com" target="_blank" class="cta-naver">
+          <a href="https://smartstore.naver.com/renbit" target="_blank" class="cta-naver">
             <span class="naver-icon">🛒</span>
             네이버 스마트스토어
           </a>
